<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HuskyHaze</string>
    <string name="weather">Weather</string>
    <string name="news">News</string>
    <string name="open_weather_api_key">6483990cc372b51dd6b1d7143741a1ee</string>
    <string name="news_api_key">4fb618dafb754d8183e4154fbdbb4930</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Preference Titles -->
    <string name="settings_header">Settings</string>

    <!-- Sync Preferences -->
    <string name="theme_title">Dark Mode</string>
    <string name="mode_title">Minimal Mode</string>
    <string name="dark_light_mode">Dark Mode</string>
    <string name="switcher_1">Switch 1</string>
    <string name="switcher_2">Switch 2</string>
    <string name="aboutUs">About Us</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="todo">TODO</string>
    <string name="settings_button">Settings button</string>
    <string name="greeting">Good [morning]!</string>
    <string name="greetingInfo">It is currently [55]&#xB0; and [sunny] in [Tacoma].</string>
    <string name="show_me">Show me…</string>
    <string name="home_background_image">Home Background Image</string>
    <string name="username">Username</string>
    <string name="_phoneNumber">+123123123</string>
    <string name="maps">Maps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_api_key">MAP_API_KEY</string>
    <!-- About Us -->
    <string name="about_header">About Husky Haze</string>
    <string name="about_header_content">Welcome to Husky Haze, your personalized weather and news companion designed specifically for the University of Washington community.</string>
    <string name="team_members">Meet the Team</string>
    <string name="team_members_content_Will">William Hay whay@uw.edu</string>
    <string name="team_members_content_Minh">Minh Vu minhv2@uw.edu</string>
    <string name="team_members_content_Taylor">Taylor Merwin tmerwin@uw.edu</string>
    <string name="team_members_content_Keegan" tools:ignore="Typos">Keegan Sanders ksand11@uw.edu</string>
    <string name="github_link">GitHub Repository</string>
    <string name="github_link_content">Explore our codebase and contribute to the development of Husky Haze on GitHub: <a href="https://github.com/TaylorMerwin/HuskyHaze">https://github.com/TaylorMerwin/HuskyHaze</a></string>
    <string name="app_purpose">Purpose of the App</string>
    <string name="app_purpose_content_1">Husky Haze is more than just a weather app; it is a comprehensive tool designed to empower UW students with timely information.
        Our mission is to provide students with easy access to both weather forecasts and relevant news updates, all within one convenient platform.</string>
    <string name="app_purpose_content_2">Whether you are planning your day on campus or preparing for a weekend getaway, Husky Haze ensures you\'re always informed and ready for whatever lies ahead.</string>
    <string name="app_purpose_content_3">Stay tuned for updates and new features as we continue to enhance the Husky Haze experience for our fellow UW Huskies!</string>
    <string name="about_us">About Us</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="this_week_s_forecast">This week\'s forecast</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here.</string>
    <string name="userEmail">email</string>
    <string name="launcher_icon">launcher icon</string>
    <string name="haze_gif">haze gif</string>
    <string name="person_icon">person icon</string>
    <string name="share_weather">Share</string>

</resources>